# tracedb-rust

./: .coderabbit.yaml  .fernignore  .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  deny.toml  reference.md
.circleci/: config.yml
.fern/: metadata.json
.github/scripts/: verify-circleci-readiness.sh
.github/workflows/: ci.yml  release.yml
examples/: quickstart.rs
src/: client.rs  config.rs  environment.rs  error.rs  lib.rs  prelude.rs
src/api/: mod.rs
src/api/resources/: mod.rs
src/api/resources/tracedb/: mod.rs
src/api/resources/tracedb/admin/: mod.rs  tracedb_admin.rs
src/api/resources/tracedb/catalog/: mod.rs  tracedb_catalog.rs
src/api/resources/tracedb/health/: mod.rs  tracedb_health.rs
src/api/resources/tracedb/metrics/: mod.rs  tracedb_metrics.rs
src/api/resources/tracedb/query/: mod.rs  tracedb_query.rs
src/api/resources/tracedb/readiness/: mod.rs  tracedb_readiness.rs
src/api/resources/tracedb/records/: mod.rs  tracedb_records.rs
src/api/resources/tracedb/schema/: mod.rs  tracedb_schema.rs
src/api/types/: get_admin_jobs_query_request.rs  mod.rs  record_delete_request.rs  record_patch_request.rs  record_put_batch_request.rs  record_scan_request.rs  restore_request.rs  snapshot_request.rs  table_schema.rs  trace_ql_query_request.rs  tracedb_access_path_explain.rs  tracedb_access_path_timing.rs  tracedb_admin_job.rs  tracedb_branch_summary.rs  tracedb_branches_response.rs  tracedb_candidate.rs  tracedb_compact_response.rs  tracedb_database_summary.rs  tracedb_databases_response.rs  tracedb_delete_response.rs  tracedb_empty_object.rs  tracedb_epoch_response.rs  tracedb_error_response.rs  tracedb_get_record_response.rs  tracedb_graph_ql_error.rs  tracedb_graph_ql_error_extensions.rs  tracedb_graph_ql_query_request.rs  tracedb_graph_ql_response.rs  tracedb_graph_ql_schema_response.rs  tracedb_health_response.rs  tracedb_hybrid_explain.rs  tracedb_hybrid_query.rs  tracedb_hybrid_query_row.rs  tracedb_hybrid_score_components.rs  tracedb_jobs_response.rs  tracedb_metrics_response.rs  tracedb_put_batch_response.rs  tracedb_query_phase_timing.rs  tracedb_query_response.rs  tracedb_ready_response.rs  (+10 more)
tests/: http_client.rs  quickstart_example.rs
