[package]
name = "tracedb-sdk"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
description = "Rust SDK for the TraceDB platform-contract-v0 HTTP API."
repository = "https://github.com/Trace-DB/tracedb-rust"
homepage = "https://trace-db.com"
readme = "README.md"
keywords = ["tracedb", "database", "sdk", "http"]
categories = ["api-bindings", "database"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]
tempfile = "3.10"
