[package]
name = "tracedb-sdk"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
version = "0.1.1"
description = "Rust SDK for the TraceDB platform-contract-v0 HTTP API."
documentation = "https://docs.rs/tracedb-sdk"
authors = ["Trace-DB"]
repository = "https://github.com/Trace-DB/tracedb-rust"
homepage = "https://trace-db.com"
readme = "README.md"
keywords = ["tracedb", "database", "sdk", "http"]
categories = ["api-bindings", "database"]

[features]
default = ["async", "rustls-tls"]
async = ["dep:tokio", "dep:reqwest"]
rustls-tls = ["reqwest?/rustls-tls"]
native-tls = ["reqwest?/native-tls"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"], optional = true }

[dev-dependencies]
tempfile = "3.10"
