[package]
name = "tracedb-sdk"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for the TraceDB platform-contract-v0 HTTP API."
license = "Apache-2.0"
repository = "https://github.com/Trace-DB/tracedb-rust"
documentation = "https://docs.rs/tracedb-sdk"
authors = ["Trace-DB"]
homepage = "https://trace-db.com"
readme = "README.md"
keywords = ["tracedb", "database", "sdk", "http"]
categories = ["api-bindings", "database"]

[lib]
doctest = false

[dependencies]
bytes = "1.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
